Update post title for clarity

--- a/_posts/2025-10-16-ai-in-prod.md
+++ b/_posts/2025-10-16-ai-in-prod.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Thoughts on AI in Production (Oct 2025)"
+title:  "Thoughts on AI in Production"
 date:   2025-10-16 17:00 +0000
 ---
 
