Update post title from 'AI in Production' to 'AI Code in Production'

--- a/_posts/2025-10-16-ai-in-prod.md
+++ b/_posts/2025-10-16-ai-in-prod.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "Thoughts on AI in Production"
+title:  "Thoughts on AI Code in Production"
 date:   2025-10-16 17:00 +0000
 ---
 
-# AI in Production
+# AI Code in Production
 AI generated code seems to prioritise simple, repetitive solutions to problems posed. [This paper](https://arxiv.org/pdf/2508.21634) highlights the difference between how complex a human vs AI written solution across a range of providers. Models will often repeat and, often unnecessarily, add complexity to codebases to design “accessible” solutions. A frequent misunderstanding models will output include on error handling. For example, asking a model to ensure that data is validated by a Pydantic object correctly can output
 
 ```python
